--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pokemon Card Generator</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <body>
         <button class="get-cards">Get 3 Cards</button>
+        <div class="pokemon-cards">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="..." alt="Pokemon Image 1">
+                <div class="card-body">
+                  <h5 class="card-title">Pokemon Name</h5>
+                  <p class="card-text">Pokemon description. Press the button get 3 Pokemon!</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="..." alt="Pokemon Image 2">
+                <div class="card-body">
+                  <h5 class="card-title">Pokemon Name</h5>
+                  <p class="card-text">Pokemon description. Press the button get 3 Pokemon!</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="..." alt="Pokemon Image 3">
+                <div class="card-body">
+                  <h5 class="card-title">Pokemon Name</h5>
+                  <p class="card-text">Pokemon description. Press the button get 3 Pokemon!</p>
+                </div>
+            </div>
+        </div>
 
         <script src="https://unpkg.com/axios/dist/axios.js"></script>
         <script src="app.js"></script>
